Subindo as alterações e testando o -a

--- a/app/views/produtos/lista.ejs
+++ b/app/views/produtos/lista.ejs
@@ -12,7 +12,7 @@
           <td>descricao</td>
           <td>preco</td>
         </tr>
-          <%for (var i=0;i<lista.length;i++) {%>
+          <%for (let i=0;i<lista.length;i++) {%>
               <tr>
                   <td><%=lista[i].id%></td>
                   <td><%=lista[i].titulo%></td>
