Arquivo do demonio]

--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -5,7 +5,7 @@
     <title>Cadastro de Livros e Produtos</title>
   </head>
   <body>
-      <form action="/produtos/salva" method="post">
+      <form action="/produtos" method="post">
         <div>
           <label for="titulo">Título: </label>
           <input type="text" id="titulo" name="titulo" placeholder="coloque o titulo do livro"/>
