--- a/app/views/produtos/form.ejs
+++ b/app/views/produtos/form.ejs
@@ -5,18 +5,27 @@
     <title>Cadastro de Livros e Produtos</title>
   </head>
   <body>
+    <div class="err">
+        <%if(errosValidacao){%>
+          <ul>
+            <%for (let i=0;i<errosValidacao.length;i++){%>
+              <li><%=errosValidacao[i].param%> - <%=errosValidacao[i].msg%></li>
+            <%}%>
+          </ul>
+        <%}%>
+    </div>
       <form action="/produtos" method="post">
         <div>
           <label for="titulo">Título: </label>
-          <input type="text" id="titulo" name="titulo" placeholder="coloque o titulo do livro"/>
+          <input type="text" id="titulo" name="titulo" value="<%=produto.titulo%>" placeholder="coloque o titulo do livro"/>
         </div>
         <div>
           <label for="preco">Preço: </label>
-          <input type="text" id="preco" name="preco" placeholder="coloque o preço do livro"/>
+          <input type="text" id="preco" name="preco"  value="<%=produto.preco%>" placeholder="coloque o preço do livro"/>
         </div>
         <div>
           <label for="descricao">Descrição: </label>
-          <textarea cols="20" rows="10" name="descricao" placeholder="Fale sobre o livro"></textarea>
+          <textarea cols="20" rows="10" name="descricao"  value="<%=produto.descricao%>" placeholder="Fale sobre o livro"></textarea>
         </div>
 
         <input type="submit" name="" value="Salvar">
