--- a/app/views/promocoes/form.ejs
+++ b/app/views/promocoes/form.ejs
@@ -2,11 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Promoções</title>
+    <title>Promocoes</title>
   </head>
   <body>
-
-      
+    <form action="/promocoes" method="post">
+      <div>
+        <input type="text" name="mensagem" value=""/>
+      </div>
+        <div>
+          <select name="livro[id]">
+              <%for(let i=0;i<lista.lenght;i++){%>
+                <option value="<%=lista[i].id%>"><%=lista[i].titulo%></option>
+              <%}%>
+          </select>
+        </div>
+      <input type="submit" name="" value="Cadastrar Promoção">
+    </form>
 
   </body>
 </html>
