--- a/app/views/promocoes/form.ejs
+++ b/app/views/promocoes/form.ejs
@@ -10,8 +10,8 @@
         <input type="text" name="mensagem" value=""/>
       </div>
         <div>
-          <select name="produto[id]">
-              <%for(let i=0;i<lista.lenght;i++){%>
+          <select name="produtos[id]">
+              <%for(var i=0;i<lista.lenght;i++){%>
                 <option value="<%=lista[i].id%>"><%=lista[i].titulo%></option>
               <%}%>
           </select>
