--- a/app/views/promocoes/form.ejs
+++ b/app/views/promocoes/form.ejs
@@ -10,7 +10,7 @@
         <input type="text" name="mensagem" value=""/>
       </div>
         <div>
-          <select name="<livros[id]>">
+          <select name="<livro[id]>">
               <%for(var i=0;i<lista.length;i++){%>
                 <option value="<%=lista[i].id%>"><%=lista[i].titulo%></option>
               <%}%>
